--- a/svc/media-core/wrangler.toml
+++ b/svc/media-core/wrangler.toml
@@ -1,5 +1,19 @@
 name = "media-core"
 main = "src/index.ts"
 compatibility_date = "2025-01-01"
+# Data-plane media abstraction responsible for uploads and retrievals.
 
-# TODO: add D1, R2, KV, and other bindings as needed
+[dev]
+port = 8789
+
+[[d1_databases]]
+binding = "DB"
+database_name = "privatetag-db"
+database_id = "privatetag-db-local"
+# Metadata about stored media, linked to TagIDs.
+
+[[r2_buckets]]
+binding = "MEDIA_BUCKET"
+bucket_name = "privatetag-media"
+preview_bucket_name = "privatetag-media-preview"
+# Physical object store for binaries referenced by apps.
