--- a/svc/st-idp/wrangler.toml
+++ b/svc/st-idp/wrangler.toml
@@ -2,4 +2,15 @@ name = "st-idp"
 main = "src/index.ts"
 compatibility_date = "2025-01-01"
 
+[dev]
+port = 8790
+
 # TODO: add D1, R2, KV, and other bindings as needed
+
+[env.dev]
+name = "st-idp-dev"
+account_id = "TODO_ACCOUNT_ID"
+
+[env.stage]
+name = "st-idp-stage"
+account_id = "TODO_ACCOUNT_ID"
